[package]
name = "latebot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.14.1", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json={ version = "*" }